--- a/Service/Logic/Logic.csproj
+++ b/Service/Logic/Logic.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<PackageId>WBH.Livescoring.Service.Console</PackageId>
+		<PackageId>WBH.Livescoring.Service.Logic</PackageId>
 		<Authors>Marvin Auf der Landwehr, Max Dreisbusch</Authors>
 		<Product>LED Videowand LiveScoring</Product>
-		<Description>Service Console</Description>
+		<Description>Logik für Service Console</Description>
 		<PackageProjectUrl>https://github.com/videowall/sportsdata-automated-scoring</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/videowall/sportsdata-automated-scoring</RepositoryUrl>
 		<RepositoryType>GIT</RepositoryType>
-		<AssemblyName>WBH.Livescoring.Service.Console</AssemblyName>
-		<RootNamespace>WBH.Livescoring.Service.Console</RootNamespace>
+		<AssemblyName>WBH.Livescoring.Service.Logic</AssemblyName>
+		<RootNamespace>WBH.Livescoring.Service.Logic</RootNamespace>
 		<Version>0.0.0.0</Version>
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
 		<AssemblyInformationalVersion>0.0.0.0</AssemblyInformationalVersion>
@@ -19,7 +19,6 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
-		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -37,26 +36,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-		<PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
-		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
-		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\IoC.Primitives\IoC.Primitives.csproj" />
 		<ProjectReference Include="..\..\IoC\IoC.csproj" />
-		<ProjectReference Include="..\Logic\Logic.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Content Include="appsettings.json">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
 	</ItemGroup>
 
 </Project>
