--- a/Frontend/API/Properties/launchSettings.json
+++ b/Frontend/API/Properties/launchSettings.json
@@ -1,28 +1,28 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49258",
-      "sslPort": 44358
+      "applicationUrl": "http://localhost:16437",
+      "sslPort": 44323
     }
   },
   "profiles": {
-    "IISExpress": {
-      "commandName": "IISExpress",
+    "API": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/swagger",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7071;http://localhost:5071",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Project": {
-      "commandName": "Project",
-      "dotnetRunMessages": "true",
+    "IIS Express": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/swagger",
-      "applicationUrl": "https://localhost:44358;http://localhost:49258",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
