--- a/Service/Logic/Logic.csproj
+++ b/Service/Logic/Logic.csproj
@@ -36,7 +36,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+		<PackageReference Include="Sportradar.LiveData.SDK" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
