--- a/Frontend/Logic/Logic.csproj
+++ b/Frontend/Logic/Logic.csproj
@@ -37,6 +37,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\IoC\IoC.csproj" />
+      <ProjectReference Include="..\..\SportRadar.Primitives\SportRadar.Primitives.csproj" />
     </ItemGroup>
 
 </Project>
