--- a/SportRadar.Primitives/SportRadar.Primitives.csproj
+++ b/SportRadar.Primitives/SportRadar.Primitives.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<PackageId>WBH.Livescoring.Service.IoC.Primitives</PackageId>
+		<PackageId>WBH.Livescoring.SportRadar.Primitives</PackageId>
 		<Authors>Marvin Auf der Landwehr, Max Dreisbusch</Authors>
 		<Product>LED Videowand LiveScoring</Product>
-		<Description>Service IoC Primitives</Description>
+		<Description>SportRadar Primitives</Description>
 		<PackageProjectUrl>https://github.com/videowall/sportsdata-automated-scoring</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/videowall/sportsdata-automated-scoring</RepositoryUrl>
 		<RepositoryType>GIT</RepositoryType>
-		<AssemblyName>WBH.Livescoring.Service.IoC.Primitives</AssemblyName>
-		<RootNamespace>WBH.Livescoring.Service.IoC</RootNamespace>
+		<AssemblyName>WBH.Livescoring.SportRadar.Primitives</AssemblyName>
+		<RootNamespace>WBH.Livescoring.SportRadar</RootNamespace>
 		<Version>0.0.0.0</Version>
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
 		<AssemblyInformationalVersion>0.0.0.0</AssemblyInformationalVersion>
