--- a/SportRadar/SportRadar.csproj
+++ b/SportRadar/SportRadar.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<PackageId>WBH.Livescoring.Service.Logic</PackageId>
+		<PackageId>WBH.Livescoring.SportRadar</PackageId>
 		<Authors>Marvin Auf der Landwehr, Max Dreisbusch</Authors>
 		<Product>LED Videowand LiveScoring</Product>
-		<Description>Logik für Service Console</Description>
+		<Description>Logik für SportRadar</Description>
 		<PackageProjectUrl>https://github.com/videowall/sportsdata-automated-scoring</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/videowall/sportsdata-automated-scoring</RepositoryUrl>
 		<RepositoryType>GIT</RepositoryType>
-		<AssemblyName>WBH.Livescoring.Service.Logic</AssemblyName>
-		<RootNamespace>WBH.Livescoring.Service.Logic</RootNamespace>
+		<AssemblyName>WBH.Livescoring.SportRadar</AssemblyName>
+		<RootNamespace>WBH.Livescoring.SportRadar</RootNamespace>
 		<Version>0.0.0.0</Version>
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
 		<AssemblyInformationalVersion>0.0.0.0</AssemblyInformationalVersion>
@@ -43,8 +43,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\IoC.Primitives\IoC.Primitives.csproj" />
-		<ProjectReference Include="..\..\IoC\IoC.csproj" />
+		<ProjectReference Include="..\IoC\IoC.csproj" />
+		<ProjectReference Include="..\SportRadar.Primitives\SportRadar.Primitives.csproj" />
 	</ItemGroup>
 
 </Project>
