--- a/SportRadar.Primitives/SportRadar.Primitives.csproj
+++ b/SportRadar.Primitives/SportRadar.Primitives.csproj
@@ -14,6 +14,7 @@
 		<AssemblyVersion>0.0.0.0</AssemblyVersion>
 		<AssemblyInformationalVersion>0.0.0.0</AssemblyInformationalVersion>
 		<FileVersion>0.0.0.0</FileVersion>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<PropertyGroup>
