--- a/Frontend/DataAccessLayer/DataAccessLayer.csproj
+++ b/Frontend/DataAccessLayer/DataAccessLayer.csproj
@@ -41,7 +41,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     </ItemGroup>
 
 </Project>
