reformat and cleanup

--- a/Frontend/API/app.config
+++ b/Frontend/API/app.config
@@ -1,74 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <!-- <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" /> -->
-    <section name="Sdk" type="Sportradar.LiveData.Sdk.Services.SdkConfiguration.Sections.SdkConfigurationSection, Sportradar.LiveData.SDK" />
-  </configSections>
+    <configSections>
+        <!-- <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" /> -->
+        <section name="Sdk"
+                 type="Sportradar.LiveData.Sdk.Services.SdkConfiguration.Sections.SdkConfigurationSection, Sportradar.LiveData.SDK"/>
+    </configSections>
 
-  <Sdk>
-    <!--Uncomment feeds you plan to use-->
-    <LiveScout ScoutUsername="username" ScoutPassword="password"/>
-    <!--<LiveOdds BookmakerId="1234" BookmakerKey="password" />-->
-    <!--<LiveOddsVbl BookmakerId="1234" BookmakerKey="password"/>-->
-    <!--<LiveOddsVfl BookmakerId="1234" BookmakerKey="password"/>-->
-    <!--<LiveOddsVhc BookmakerId="1234" BookmakerKey="password"/>-->
-    <!--<LiveOddsVdr BookmakerId="1234" BookmakerKey="password"/>-->
-    <!--<LiveOddsVto BookmakerId="1234" BookmakerKey="password"/>-->
-    <!--<BetPal BookmakerId="1234" BookmakerKey="password" />-->
-    <!--<LivePlex BookmakerId="1234" BookmakerKey="password" />-->
-    <!--<SoccerRoulette BookmakerId="1234" BookmakerKey="password" />-->
-    <!--<OddsCreator Username="username" Password="password"/>-->
-    <!--<Lcoo Username="username" Password="password" />-->
-  </Sdk>
+    <Sdk>
+        <!--Uncomment feeds you plan to use-->
+        <LiveScout ScoutUsername="username" ScoutPassword="password"/>
+        <!--<LiveOdds BookmakerId="1234" BookmakerKey="password" />-->
+        <!--<LiveOddsVbl BookmakerId="1234" BookmakerKey="password"/>-->
+        <!--<LiveOddsVfl BookmakerId="1234" BookmakerKey="password"/>-->
+        <!--<LiveOddsVhc BookmakerId="1234" BookmakerKey="password"/>-->
+        <!--<LiveOddsVdr BookmakerId="1234" BookmakerKey="password"/>-->
+        <!--<LiveOddsVto BookmakerId="1234" BookmakerKey="password"/>-->
+        <!--<BetPal BookmakerId="1234" BookmakerKey="password" />-->
+        <!--<LivePlex BookmakerId="1234" BookmakerKey="password" />-->
+        <!--<SoccerRoulette BookmakerId="1234" BookmakerKey="password" />-->
+        <!--<OddsCreator Username="username" Password="password"/>-->
+        <!--<Lcoo Username="username" Password="password" />-->
+    </Sdk>
 
-<!--
-  <log4net>
-    <appender name="SdkConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <levelMin value="WARN"/>
-      </filter>
-      <mapping>
-        <level value="WARN" />
-        <foreColor value="Purple" />
-      </mapping>
-      <mapping>
-        <level value="ERROR" />
-        <foreColor value="Red" />
-      </mapping>
-    </appender>
-
-    <appender name="AppConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
-      </layout>
-      <mapping>
-        <level value="INFO" />
-        <foreColor value="White" />
-      </mapping>
-      <mapping>
-        <level value="DEBUG" />
-        <foreColor value="White" />
-      </mapping>
-      <mapping>
-        <level value="WARN" />
-        <foreColor value="Purple" />
-      </mapping>
-      <mapping>
-        <level value="ERROR" />
-        <foreColor value="Red" />
-      </mapping>
-    </appender>
-
-    <logger name="Sportradar.SDK" >
-      <appender-ref ref="SdkConsoleAppender"/>
-    </logger>
-
-    <logger name="Sportradar.DemoProject" >
-      <appender-ref ref="AppConsoleAppender"/>
-    </logger>
-  </log4net>
-  -->
+    <!--
+      <log4net>
+        <appender name="SdkConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+          <layout type="log4net.Layout.PatternLayout">
+            <conversionPattern value="%date [%thread] %-5level - %message%newline" />
+          </layout>
+          <filter type="log4net.Filter.LevelRangeFilter">
+            <levelMin value="WARN"/>
+          </filter>
+          <mapping>
+            <level value="WARN" />
+            <foreColor value="Purple" />
+          </mapping>
+          <mapping>
+            <level value="ERROR" />
+            <foreColor value="Red" />
+          </mapping>
+        </appender>
+    
+        <appender name="AppConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+          <layout type="log4net.Layout.PatternLayout">
+            <conversionPattern value="%date [%thread] %-5level - %message%newline" />
+          </layout>
+          <mapping>
+            <level value="INFO" />
+            <foreColor value="White" />
+          </mapping>
+          <mapping>
+            <level value="DEBUG" />
+            <foreColor value="White" />
+          </mapping>
+          <mapping>
+            <level value="WARN" />
+            <foreColor value="Purple" />
+          </mapping>
+          <mapping>
+            <level value="ERROR" />
+            <foreColor value="Red" />
+          </mapping>
+        </appender>
+    
+        <logger name="Sportradar.SDK" >
+          <appender-ref ref="SdkConsoleAppender"/>
+        </logger>
+    
+        <logger name="Sportradar.DemoProject" >
+          <appender-ref ref="AppConsoleAppender"/>
+        </logger>
+      </log4net>
+      -->
 </configuration>
