--- a/Frontend/API/appsettings.json
+++ b/Frontend/API/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Debug",
     "WriteTo": [
       {
@@ -16,9 +19,15 @@
           "rollingInterval": "Day"
         }
       },
-      { "Name": "Console" }
+      {
+        "Name": "Console"
+      }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
   "AllowedHosts": "*"
 }
