--- a/Frontend/Logic/Logic.csproj
+++ b/Frontend/Logic/Logic.csproj
@@ -24,20 +24,24 @@
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-        <WarningsAsErrors/>
-        <NoWarn/>
+        <WarningsAsErrors />
+        <NoWarn />
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-        <WarningsAsErrors/>
-        <NoWarn/>
+        <WarningsAsErrors />
+        <NoWarn />
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\IoC\IoC.csproj"/>
-        <ProjectReference Include="..\..\SportRadar.Primitives\SportRadar.Primitives.csproj"/>
+      <ProjectReference Include="..\..\IoC\IoC.csproj" />
+      <ProjectReference Include="..\..\SportRadar.Primitives\SportRadar.Primitives.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
     </ItemGroup>
 
 </Project>
