--- a/Frontend/Logic/Logic.csproj
+++ b/Frontend/Logic/Logic.csproj
@@ -38,6 +38,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\IoC\IoC.csproj" />
       <ProjectReference Include="..\..\SportRadar.Primitives\SportRadar.Primitives.csproj" />
+      <ProjectReference Include="..\DataAccessLayer.Primitives\DataAccessLayer.Primitives.csproj" />
     </ItemGroup>
 
     <ItemGroup>
