SportRadar API Implementierung (#3)
* Serilog IoC

* Startup & Shutdown Tasks implemented

* SportRadar Implementation WIP

* Add missing eventhandler

* Handler Update

* Move SportRadar Logic to own Library

* Handler

* LiveScout Handler Interfaces

* BackgroundJob implemented

* DataAccessLayer implemented

* DataAccessLayer non relational

* Feature/contracts (#2)

* Added Contracts and Handlers

* naming conventions

* Corrections

Co-authored-by: Marvin Auf der Landwehr <marvin.auf-der-landwehr@outlook.com>

* added entities

* running eventHandlers

* reformat and cleanup

* Repository Pattern for Save and Delete in DbContext

* Cleaning

* Register AutoMapper

* added mappings

* Bug Fixes

* added some handlers

* BookingReply and Closed implemented

* Rename Method

Co-authored-by: Max Dreisbusch <max.dreisbusch@gmx.de>

--- a/Frontend/API/API.csproj
+++ b/Frontend/API/API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<PackageId>WBH.Livescoring.Frontend.API</PackageId>
@@ -35,25 +35,38 @@
 		<WarningsAsErrors />
 		<NoWarn>1591</NoWarn>
 		<DocumentationFile>bin\Release\net6.0\WBH.Livescoring.Frontend.API.xml</DocumentationFile>
-	</PropertyGroup>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-		<PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.3" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\..\IoC\IoC.csproj" />
-		<ProjectReference Include="..\Logic\Logic.csproj" />
+    <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.6" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\IoC\IoC.csproj" />
+        <ProjectReference Include="..\..\SportRadar\SportRadar.csproj" />
+        <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+        <ProjectReference Include="..\Logic\Logic.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Update="Module.AutoMapper.cs">
+          <DependentUpon>Module.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Module.Background.cs">
+          <DependentUpon>Module.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Module.DataAccessLayer.cs">
+          <DependentUpon>Module.cs</DependentUpon>
+        </Compile>
         <Compile Update="Module.HealthChecks.cs">
             <DependentUpon>Module.cs</DependentUpon>
         </Compile>
@@ -64,5 +77,17 @@
             <DependentUpon>Module.cs</DependentUpon>
         </Compile>
 	</ItemGroup>
+
+    <ItemGroup>
+      <Content Update="app.config">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+	<!-- START: This is a buildtime work around for https://github.com/dotnet/corefx/issues/22101 -->
+	<Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+		<Copy SourceFiles="app.config" DestinationFiles="$(OutDir)\WBH.Livescoring.Frontend.API.dll.config" />
+	</Target>
+	<!-- END: This is a buildtime work around for https://github.com/dotnet/corefx/issues/22101 -->
 
 </Project>
